# Project-Hospital-Autonomous-Wheelchair

./: .gitignore  README.md
3D_Model/: readme.txt
Hospital_DB/: hospital_backup.sql  hospital_full_backup.sql  hospital_schema.sql  readme.txt  setup_db.sh
Hospital_Server/: CMakeLists.txt
Hospital_Server/include/: common_defs.h  server_db.h
Hospital_Server/src/: main.c  robot_manager.c  server_db.c  tcp_bridge.py
Hospital_Terminal/: Hospital_Terminal.pro  account_admin.cpp  account_admin.h  account_admin.ui  account_manage.h  database_manager.cpp  database_manager.h  keyboard.cpp  keyboard.h  keyboard.ui  kiosk_back.cpp  kiosk_back.h  kiosk_back.ui  kiosk_container.cpp  kiosk_container.h  kiosk_container.ui  kiosk_login.cpp  kiosk_login.h  kiosk_login.ui  kiosk_main.cpp  kiosk_main.h  kiosk_main.ui  kiosk_search.cpp  kiosk_search.h  kiosk_search.ui  kiosk_wheel.cpp  kiosk_wheel.h  kiosk_wheel.ui  live_monitor_dialog.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  search_medical.cpp  search_medical.h  search_medical.ui  (+12 more)
Hospital_Terminal/icons/: Hospital.pgm  Hospital.xcf  map_hospital.pgm
Hospital_WheelChair/: readme.txt  turtlebot3_burger_Hospital_fixed_bak.urdf
Hospital_WheelChair/hospital_ws/: .gitignore
Hospital_WheelChair/hospital_ws/install/: local_setup.sh  setup.sh
Hospital_WheelChair/hospital_ws/log/: latest_build
Hospital_WheelChair/hospital_ws/src/hospital_description/: CMakeLists.txt  package.xml
Hospital_WheelChair/hospital_ws/src/hospital_description/launch/: hospital_gazebo_spawn.launch.py  map_gazebo.launch.py
Hospital_WheelChair/hospital_ws/src/hospital_description/maps/: Hospital.pgm  Hospital.stl
Hospital_WheelChair/hospital_ws/src/hospital_description/urdf/: turtlebot3_burger_Hospital_fixed.urdf
Hospital_WheelChair/ros_ws/install/: setup.bash  setup.zsh
Hospital_WheelChair/ros_ws/log/: latest_build
Hospital_WheelChair/ros_ws/src/wc_bringup/: setup.cfg  setup.py
Hospital_WheelChair/ros_ws/src/wc_mission_manager/: package.xml  setup.py
Hospital_WheelChair/ros_ws/src/wc_server_bridge/: package.xml  setup.cfg
Hospital_WheelChair/ros_ws/src/wc_stm_driver/: setup.cfg  setup.py
Hospital_WheelChair/stm32U5/: ros_project Debug.launch  ros_project.ioc
Hospital_WheelChair/stm32U5/.metadata/: version.ini
Hospital_WheelChair/stm32U5/Core/Inc/: fsr.h  stm32u5xx_it.h  ultrasonic.h
Hospital_WheelChair/stm32U5/Core/Src/: fsr.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c  ultrasonic.c
Hospital_WheelChair/stm32U5/Debug/: objects.list  ros_project.elf  ros_project.map
Hospital_WheelChair/wc_server_bridge/: setup.py
Hospital_WheelChair/wc_server_bridge/wc_server_bridge/: tcp_bridge.py
Hospital_WithSTM/Hospital_DB/: hospital_backup.sql  hospital_schema.sql  readme.txt  setup_db.sh
Hospital_WithSTM/Hospital_STM/: STM32U5G9J-DK2.ioc
Hospital_WithSTM/Hospital_STM/Core/Inc/: common_data.h  main.h  (+2 more)
Hospital_WithSTM/Hospital_STM/STM32CubeIDE/: .cproject  .project
Hospital_WithSTM/Hospital_STM/TouchGFX/: MyApplication_2.touchgfx
Hospital_WithSTM/Hospital_Server/: CMakeLists.txt
Hospital_WithSTM/Hospital_Server/include/: robot_manager.h
Hospital_WithSTM/Hospital_Server/src/: robot_manager.c  server_db.c  tcp_bridge.py
Hospital_WithSTM/Hospital_Terminal/: Hospital_Terminal.pro  account_admin.h  account_admin.ui  account_manage.cpp  account_manage.ui  add_robot_dialog.h  database_manager.cpp  database_manager.h  keyboard.cpp  keyboard.h  kiosk_back.ui  kiosk_container.h  kiosk_container.ui  kiosk_login.h  kiosk_login.ui  kiosk_main.cpp  kiosk_main.h  kiosk_main.ui  kiosk_wheel.cpp  main.cpp  resources.qrc  tab_medical.cpp  tab_medical.h  wheelchair_admin.cpp  wheelchair_admin.ui  wheelchair_map.cpp  wheelchair_map.h
Hospital_WithSTM/Hospital_Terminal/icons/: Hospital.pgm
Hospital_WithSTM/Hospital_WheelChair/: readme.txt  robot.launch.py  stm32_bridge_all.py
Hospital_WithSTM/Hospital_WheelChair/dist_seat_topic_pkg/: package.xml  setup.cfg  setup.py
Hospital_WithSTM/Hospital_WheelChair/hospital_ws/src/hospital_description/: CMakeLists.txt
Hospital_WithSTM/Hospital_WheelChair/hospital_ws/src/hospital_description/launch/: hospital_gazebo_spawn.launch.py
Hospital_WithSTM/Hospital_WheelChair/hospital_ws/src/hospital_description/maps/: Hospital.yaml
Hospital_WithSTM/Hospital_WheelChair/hospital_ws/src/hospital_description/meshes/bases/: top_plate.stl
Hospital_WithSTM/Hospital_WheelChair/hospital_ws/src/hospital_description/meshes/chair/: chair.stl
Hospital_WithSTM/Hospital_WheelChair/hospital_ws/src/hospital_description/urdf/: map_hospital.urdf
Hospital_WithSTM/Hospital_WheelChair/ros_pi/: ros_state_to_stm32.py  stm32_bridge_all.py  stm32_sensor_bridge.py
Hospital_WithSTM/Hospital_WheelChair/stm32U5/: .cproject  .mxproject  .project
Hospital_Without_STM/Hospital_Terminal/: login.ui  tab_admin.h  tab_admin.ui  wheelchair_medical.h
Hospital_Without_STM/Hospital_WheelChair/stm32U5/: ros_project.ioc
MyApplication_2/: STM32U5G9J-DK2.ioc
MyApplication_2/Core/Inc/: stm32u5xx_hal_conf.h  stm32u5xx_it.h
MyApplication_2/Core/Src/: main.c  stm32u5xx_hal_msp.c
MyApplication_2/STM32CubeIDE/: .project
MyApplication_2/TouchGFX/: MyApplication_2.touchgfx
SLAM_MAP/: Hospital.pgm  Hospital.yaml  clean_map.py  map.pgm  map_Hospital.yaml  map_Hospital_org.pgm  map_hospital_fix.pgm  map_hospital_fix.yaml  map_hospital_fix_a.pgm
SLAM_MAP/hospital_world/: hospital.world
SLAM_MAP/hospital_world/meshes/: map_Hospital_3D.stl
build-Hospital_Terminal-Desktop-Debug/: moc_account_admin.cpp  moc_account_manage.cpp  moc_database_manager.cpp  moc_keyboard.cpp  moc_login.cpp  moc_mainwindow.cpp  moc_search_medical.cpp  moc_tab_admin.cpp  moc_tab_medical.cpp  moc_wheelchair_admin.cpp  moc_wheelchair_map.cpp  moc_wheelchair_medical.cpp  qrc_resources.cpp  ui_account_admin.h  ui_account_manage.h  ui_keyboard.h  ui_login.h  ui_mainwindow.h  ui_search_medical.h  ui_tab_admin.h  ui_tab_medical.h  ui_wheelchair_admin.h  ui_wheelchair_map.h  ui_wheelchair_medical.h
(+165 files in other folders)
